// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component renders a video with custom ratio (4:3) 1`] = `
.sx03kzey4sda--css {
  padding-top: 0.5625px;
}

.sx03kze8zm1g--css {
  padding-top: 0.75px;
}

<div>
  <div
    class="sx03kze sx03kze8zm1g--css"
    data-testid="css-wrapper"
  >
    <div
      class="sx03kze"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`Video component renders a video with default ratio 1`] = `
.sx03kzey4sda--css {
  padding-top: 0.5625px;
}

<div>
  <div
    class="sx03kze sx03kzey4sda--css"
    data-testid="css-wrapper"
  >
    <div
      class="sx03kze"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;
